2006-01-06  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Linking, Program and Library Variables):
	Mention the file extensions that usually appear in _DEPENDENCIES,
	and point to BUILT_SOURCES and example of _DEPENDENCIES uses.  A
	couple of people have been listing sources files in _DEPENDENCIES
	lately.

	* doc/automake.texi: Bump copyright year.
	* automake.in ($gen_copyright, version): Likewise.
	* aclocal.in (write_aclocal, version): Likewise.

2006-01-05  Stepan Kasal  <kasal@ucw.cz>
	    Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (top_srcdir): New global.
	(generate_makefile): Compute it.
	(fill_dist_dirs): New function extracted from handle_dist.
	(handle_dist, handle_configure): Use fill_dist_dirs.
	* tests/distdir.test: Test for cases where $(top_srcdir) or
	$(srcdir) appear in EXTRA_DIST.  Report from Sander Niemeijer.

2006-01-05  Zack Weinberg  <zackw@panix.com>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/depcomp: Add 'ia64hp' dependency style.
	Zack's original patch was contributed to GCC on 2005-06-13.
	(tru64): Typo.

2005-11-01  Stepan Kasal  <kasal@ucw.cz>

	* lib/install-sh: Use "trap '' 0" instead of "trap - 0", so that
	the code is portable to both POSIX and pre-POSIX shells.

2005-10-17  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/nobase.test: Use `chmod a-x' instead of `chmod -x',
	suggested by Eric Blake.

2005-10-17  Stepan Kasal  <kasal@ucw.cz>

	* doc/automake.texi (Program and Library Variables): Typo.
	* lib/Automake/Variable.pm (transform_variable_recursively): Typo
	in a comment.

2005-10-03  Stepan Kasal  <kasal@ucw.cz>

	* ChangeLog.03, automake.in, tests/overrid.test: Typos.

2005-10-03  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/nobase.test: Exercise previous patch.

2005-10-03  Peter O'Gorman  <peter@pogma.com>  (tiny change)

	* lib/am/distdir.am: Remove $(SHELL) when calling install_sh
	* m4/strip.m4: Ditto.
	* m4/install-sh.m4: Add $(SHELL) to the definition of install_sh
