@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2002, 2003  Free Software Foundation, Inc.
+# Copyright (C) 2002, 2003, 2006  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -18,8 +18,9 @@
 # the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
 # Boston, MA 02110-1301, USA.
 
-# Check for subdir Texinfo.
-# PR/343
+# Check for subdir Texinfo (PR/343)
+# Also make sure we do not distribute too much foo.info* files (Report
+# from Vincent Lefevre)
 
 required='makeinfo tex texi2dvi-o'
 . ./defs || exit 1
@@ -34,6 +35,8 @@ subdir_main_TEXINFOS = subdir/inc.texi
 
 installcheck-local:
 	test -f $(infodir)/main.info
+check-local:
+	test ! -f $(srcdir)/subdir/main.info.bak
 END
 
 mkdir subdir
@@ -53,6 +56,7 @@ cat > subdir/inc.texi << 'END'
 I'm included.
 END
 
+touch subdir/main.info.bak
 
 $ACLOCAL
 $AUTOMAKE --add-missing
@@ -64,3 +68,4 @@ cd build
 $MAKE distcheck
 test -f ../subdir/main.info
 test ! -f subdir/main.info
+test -f ../subdir/main.info.bak
