@@ -1,3 +1,12 @@
+2006-01-12  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* tests/txinfo13.test: Test fix below.
+
+2006-01-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* lib/am/texinfos.am (dist-info): Tighten glob to avoid unwanted
+	extra files in distribution.  Reported by Vincent Lefevre.
+
 2006-01-06  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* doc/automake.texi (Linking, Program and Library Variables):
